# calorie-track-ai-bot-api

./: .dockerignore  .env.example  .eslintignore  .gitignore  .pre-commit-config.yaml  .spectral.yaml  CLAUDE.md  DEVELOPMENT.md  DEVELOPMENT_MODES.md  DOCKER_ENV_SETUP.md  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  pyproject.toml  pytest.ini  run_comprehensive_tests.sh  run_tests.sh  setup.sh
.cursor/rules/: specify-rules.mdc
.github/: dependabot.yml
.github/workflows/: backend-build.yml  backend-ci.yml  backend-deploy.yml  build.yml  ci.yml  deploy.yml  frontend-ci.yml  frontend-deploy.yml  supabase-migrations.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: .env.example  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  check_bot_connection.py  env.template  fly.toml  pyproject.toml  pytest.ini  run_local_migration.py  run_migration.py
backend/infra/: schema.sql
backend/migrations/: env.py
backend/migrations/versions/: 32bd9ca36fa6_enable_rls_on_goals_table.py  5433ce9b3d46_add_foreign_key_indexes.py  b3787d0bd8c7_rename_breakdown_to_items.py  c7d0e18129c2_initial_schema.py  cd1b71505ecc_enable_rls_and_policies.py  ed68ca203ade_optimize_rls_policies_performance.py  f1a2b3c4d5e6_add_goals_table.py  g2h3i4j5k6l7_allow_null_user_id_in_goals.py
backend/specs/: openapi.yaml
backend/src/calorie_track_ai_bot/: main.py  schemas.py
backend/src/calorie_track_ai_bot/api/v1/: auth.py  bot.py  bot.py.backup  config.py  connectivity.py  daily_summary.py  deps.py  dev.py  estimates.py  feedback.py  goals.py  health.py  inline_analytics.py  logs.py  meals.py  photos.py  statistics.py
backend/src/calorie_track_ai_bot/services/: config.py  database.py  db.py  estimator.py  feedback_service.py  inline_notifications.py  inline_renderer.py  language_detection.py  logging_service.py  monitoring.py  queue.py  statistics_service.py  storage.py  telegram.py  theme_detection.py
backend/src/calorie_track_ai_bot/services/db/: __init__.py  _base.py  estimates.py  goals.py  inline_analytics.py  meals.py  photos.py  summaries.py  ui_config.py  users.py
backend/src/calorie_track_ai_bot/utils/: __init__.py  error_handling.py
backend/src/calorie_track_ai_bot/workers/: estimate_worker.py
backend/tests/: README.md  conftest.py  test_main.py
backend/tests/api/v1/: test_auth.py  test_bot.py  test_bot_inline.py  test_config_language.py  test_config_theme.py  test_config_ui_get.py  test_config_ui_put.py  test_daily_summary.py  test_dev_environment.py  test_dev_supabase_status.py  test_estimates.py  test_estimates_multiphotos.py  test_feedback.py  test_goals.py  test_health_connectivity.py  test_inline_analytics_endpoint.py  test_logs.py  test_meals.py  test_meals_calendar.py  test_meals_delete.py  test_meals_get.py  test_meals_list.py  test_meals_update.py  test_meals_user_id.py  test_performance_contracts.py  test_photos.py  test_photos_multiphotos.py
backend/tests/integration/: test_api_contracts.py  test_bot_to_miniapp_workflow.py  test_connectivity.py  test_error_handling.py  test_inline_failure_flow.py  test_inline_flows.py  test_inline_group_flow.py  test_inline_private_flow.py  test_logging_system.py  test_meal_deletion.py  test_meal_editing.py  test_multiphotos_no_text.py  test_multiphotos_workflow.py  test_photo_limit.py  test_photo_to_meal_workflow.py  test_photo_urls.py
backend/tests/performance/: test_resource_usage.py
backend/tests/services/: test_config.py  test_db.py  test_estimator.py  test_estimator_multiphotos.py  test_feedback_service.py  test_inline_notifications.py  test_inline_observability.py  test_logging_service.py  test_monitoring.py  test_photo_limit.py  test_photo_validation.py  test_queue.py  test_storage.py  test_telegram_media_groups.py
backend/tests/workers/: test_estimate_worker.py
docs/: AGENTS.md  ARCHITECTURE.md  COMPONENT_REFACTORING.md  COMPREHENSIVE_TESTING_STRATEGY.md  DATABASE_SETUP.md  DEVELOPMENT.md  DEVELOPMENT_MODES.md  DOCKER_CACHE_TROUBLESHOOTING.md  DOCKER_ENV_SETUP.md  FEEDBACK_TESTING.md  GITHUB_SECRETS.md  INFINITE_LOOP_PREVENTION.md  INTEGRATION_TESTING.md  MIGRATION_GUIDE.md  MOBILE_SAFE_AREAS.md  database-schema-changes.md
frontend/: .ncurc.json  CLAUDE.md  Dockerfile  Makefile  README.md  eslint.config.js  index.html  openapi.json  orval.config.ts  package-lock.json  package.json  playwright.config.ts  test-ci.js  test-language-detector.html  test-theme-detector.html  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/docs/: components.md  e2e-testing-guide.md  performance-accessibility.md
frontend/src/: app.css  app.tsx  config.ts  main.tsx  telegram-webapp.css  telegram-webapp.d.ts  telegram.d.ts  test-setup.ts
frontend/src/api/: client.ts  (+1 more)
frontend/test-results/: .last-run.json
frontend/tests/: UI-UX-TESTING.md
infra/: schema.sql
specs/: openapi.yaml
specs/001-description-i-am/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-i-need-to/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-update-logic-for/: IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/calorie_track_ai_bot/: main.py
supabase/: config.toml  seed.sql
supabase/migrations/: 20250925075640_initial_schema.sql  20250930012519_multiphotos_meals.sql  20251002100414_add_photo_ids_to_estimates.sql  20251101151727_add_feedback_submissions.sql  20251102080000_add_macro_columns_to_meals.sql  20251102080001_enable_rls_feedback_submissions.sql  20251102080002_fix_function_search_paths.sql  20251108000000_add_feedback_rls_policies.sql
tests/: README.md  conftest.py  test_main.py
tests/services/: test_config.py  test_estimator.py  test_queue.py  test_storage.py
(+227 files in other folders)
