[project]
name = "calorie-track-ai-bot"
version = "0.1.0"
description = "Telegram bot to track calories using AI"
authors = [
  {name = "Evgenii Vasilenko", email = "evgenii.vasilenko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "psycopg[binary,pool]>=3.3.2",
  "python-dotenv==1.2.1",
  "openai>=2,<3",
  "uvicorn[standard]==0.40.0",
  "fastapi",
  "boto3>=1.40.25",
  "redis>=6.4.0",
  "httpx>=0.27.0",
# Structured logging dependencies
  "structlog>=24.4.0",
  "python-json-logger>=2.0.7",
  "uuid-utils>=0.9.0",
]

[dependency-groups]
dev = [
  "pre-commit",
  "pyright",
  "ruff",
  "tabulate>=0.9.0",
  {include-group = "test"}
]
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-watch",
  "pytest-cov",
  "psutil>=6.0.0",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"
fix = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pyright]
include = ["src/calorie_track_ai_bot"]
exclude = [
  ".venv",
  "**/__pycache__",
  ".git",
  "src/calorie_track_ai_bot/migrations",
  "**/site-packages",
  "**/dist",
  "**/build",
  "tests",
  "webapp",
  "infra",
  "migrations",
  "*.pyc",
  "*.pyo",
  "*.pyd",
  ".pytest_cache",
  ".ruff_cache",
  "node_modules",
  "*.egg-info",
  "**/test_*.py",
  "**/tests/**",
  "test_*.py"
]
pythonVersion = "3.12"
pythonPath = ".venv/bin/python3"
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingImports = true
reportOptionalMemberAccess = "warning"
reportUnknownMemberType = "information"
reportArgumentType = "error"
reportAttributeAccessIssue = "error"
useLibraryCodeForTypes = true
reportUnknownVariableType = "information"
reportUnknownArgumentType = "information"
